--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
-    <script src="/app.js" defer></script>
+    <script src="app.js" defer></script>
     <title>draggable</title>
 </head>
 <body>
@@ -13,32 +13,32 @@
       <i id="left" class="fa-solid fa-angle-left"></i>
         <div class="carousel">
             <div class="card">
-                <div class="image"><img src="/images/img-4.jpg" alt="img" draggable="false"></div>
+                <div class="image"><img src="images/img-4.jpg" alt="img" draggable="false"></div>
                 <h2>blanche person</h2>
                 <span>slaes manager</span>
             </div>
             <div class="card">
-                <div class="image"><img src="/images/img-2.jpg" alt="img" draggable="false"></div>
+                <div class="image"><img src="images/img-2.jpg" alt="img" draggable="false"></div>
                 <h2>jonas braures</h2>
                 <span>web developer</span>
             </div>
             <div class="card">
-                <div class="image"><img src="/images/img-4.jpg" alt="img" draggable="false"></div>
+                <div class="image"><img src="images/img-4.jpg" alt="img" draggable="false"></div>
                 <h2>lariach french</h2>
                 <span>online teacher</span>
             </div>
             <div class="card">
-                <div class="image"><img src="/images/img-2.jpg" alt="img" draggable="false"></div>
+                <div class="image"><img src="images/img-2.jpg" alt="img" draggable="false"></div>
                 <h2>james khosravi</h2>
                 <span>freelancer</span>
             </div>
             <div class="card">
-                <div class="image"><img src="/images/img-6.jpg" alt="img" draggable="false"></div>
+                <div class="image"><img src="images/img-6.jpg" alt="img" draggable="false"></div>
                 <h2>kristina zeakfef</h2>
                 <span>bank manger</span>
             </div>
             <div class="card">
-                <div class="image"><img src="/images/img-2.jpg" alt="img" draggable="false"></div>
+                <div class="image"><img src="images/img-2.jpg" alt="img" draggable="false"></div>
                 <h2>donald hardon</h2>
                 <span>app designer</span>
             </div>
